# ai-teammate-python

./: LICENSE  README.md  pyproject.toml
ai_teammate/: __init__.py  client.py  exceptions.py  types.py
ai_teammate/resources/: __init__.py  agents.py  bookmarks.py  end_users.py  memories.py  shares.py  teams.py
tests/: test_e2e_share_flow.py
