[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-teammate"
version = "0.2.0"
description = "Python SDK for AI Teammate - Build and deploy AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MobioLabs", email = "dev@mobiolabs.net" }
]
keywords = ["ai", "agent", "llm", "chatbot", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://ai-teammate.net"
Documentation = "https://ai-teammate.net/docs/api"
Repository = "https://github.com/mobiolabs2025/ai-teammate-python"

[tool.hatch.build.targets.wheel]
packages = ["ai_teammate"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
